# Seshin

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: auth.rs  event.rs  events.rs  mod.rs  search.rs  user.rs
backend/src/db/: postgres.rs
frontend/: next.config.js  package-lock.json  package.json
frontend/src/api/search/: fetch.ts  interfaces.ts
frontend/src/api/user/: fetching.ts  interfaces.ts
frontend/src/app/: globals.scss  layout.tsx  page.tsx
frontend/src/app/app/: page.tsx  server.tsx
frontend/src/app/app/[slug]/: client.tsx  page.tsx
frontend/src/app/app/activity/: client.tsx  page.tsx  server.tsx
frontend/src/app/app/search/: client.tsx  page.tsx  search.module.scss  server.tsx
frontend/src/app/app/u/[slug]/: client.tsx  server.tsx  user.module.scss
frontend/src/app/app/u/[slug]/events/: page.tsx
frontend/src/app/login/: client.tsx  page.tsx
frontend/src/components/footer/: footer.module.scss  footer.tsx
frontend/src/components/header/: client.tsx  header.module.scss  header.tsx
