[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
postgres = "0.19.5"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.7"
tokio = "1.28.2"
tokio-postgres = "0.7.8"
